# love-language

./: .gitignore  LICENSE  Pipfile  README.md  generate.py  package.json  tests.py
.circleci/: config.yml  test_langs.yml
.github/: FUNDING.yml
examples/use-of-force/: README.md
projects/golang/: go.mod  main.go  main_test.go
projects/golang/schemas/: use-of-force.schema.json
projects/python/: pyproject.toml  pytest.ini  tests.py
projects/python/lovelanguage/: __init__.py
projects/python/lovelanguage/schemas/: use-of-force.schema.json
schemas/: knowledge-of-infrastructure.schema.json  other-methologies-two-and-three.schema.json  use-of-force.schema.json
schemas/bdc/: knowledge-of-infrastructure.schema.json
schemas/tnecd/: a-availability.schema.json  b-business-service-only.schema.json  c-cai.schema.json  d-data-cap.schem.json  e-enforceable-commitment.schema.json  n-not-enforceable-commitment.schema.json  p-planned-service.schema.json  r-not-a-cai.schema.json  t-technology.schema.json
stix-extensions/: Pipfile  deadly-force.json  generate.py  pytest.ini  tests.py
